# eYSIP-2017_Indoor-Environments-Mapping-using-UAV

./: README.md  setup.sh
Documents/Firebird-VI/: LPCXpresso_Installation and Activation.txt
Documents/Firebird-VI/Experiments/HexFiles/: ADC_DEMO.hex  BATTERY_MONITOR_DEMO.hex  GPIO.hex  GPS_DEMO.hex  I2C_ADC_DEMO.hex  IMU_DEMO.hex  LINE_FOLLOWER.hex  MOTION_CONTROL_FBRL.hex  MOTION_CONTROL_FBRL_ENCODER_BASED.hex  OBSTACLE_AVOIDANCE.hex  REMOTE_2.4GHZ_DEMO.hex  RS232_GUI_DEMO.hex  SELF_TEST.hex  SENSOR_POD_DEMO.hex  WIFI_DEMO.hex  XBEE_GUI_DEMO.hex
Documents/ProgressPresentation_6thJune/: Progress-Presentation.aux  Progress-Presentation.nav  Progress-Presentation.out  Progress-Presentation.tex  Progress-Presentation.toc
Documents/ProjectReport/: project_report.aux  project_report.out  project_report.tex
Documents/Tutorials/: Adding Realsense R200 camera to ARDrone in Gazebo7.pptx  Landing Drone on ArUco marler.pptx  OctoMap and RTAB-Map.pptx  Using RTAB-Map for mapping with Kinect.pptx
ardrone_simulator_gazebo7/cvg_sim_gazebo/scripts/: ardrone_get_odometry.py  aruco_land.py  aruco_navigate.py  keyboard.py
autonomous_exploration/: CMakeLists.txt  package.xml
autonomous_exploration/include/autonomous_exploration/: AutonomousExploration.h
autonomous_exploration/src/: AutonomousExploration.cpp  AutonomousExploration_node.cpp
bash_scripts/: Firebird6.sh  autonomous_mapping.sh  install_gazebo7.sh  keyboard_mapping.sh
depth_image_proc/src/nodelets/: point_cloud_xyzrgb.cpp  register.cpp
drone_application/: package.xml
drone_application/launch/: test_simulator.launch  test_simulator.launch~
drone_application/scripts/: aruco_land.py  aruco_navigate.py  keyboard.py
firebird6/: CMakeLists.txt  package.xml
firebird6/scripts/: Firebird6.py  send_command.py
marker_pose_detection/calibrationdata/: ost.txt  ost.yaml
marker_pose_detection/launch/: viewpoint_estimation_genius_f100.launch
marker_pose_detection/src/: viewpoint_estimation_lib.cpp
move_it/: .setup_assistant  CMakeLists.txt  package.xml
move_it/.action/: MultiDofFollowJointTrajectory.action
move_it/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  quadrotor.srdf  sensors_camera.yaml
move_it/launch/: ._moveit.launch  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  quadrotor_moveit_controller_manager.launch.xml  quadrotor_moveit_sensor_manager.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
pal_vision_segmentation/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
pal_vision_segmentation/cfg/: DepthSegment.cfg  DisparitySegment.cfg  HistogramSegment.cfg  TemplateSegment.cfg
pal_vision_segmentation/config/: default_tabletop_disparity.yaml  default_tabletop_template.yaml
pal_vision_segmentation/etc/: pringles.bag
pal_vision_segmentation/include/pal_vision_segmentation/: histogram.h  image_processing.h
pal_vision_segmentation/launch/: disparity_segment.launch  histogram_segment.launch  template_segment.launch
pal_vision_segmentation/src/: depth_segmentation.cpp  disparity_segmentation.cpp  histogram.cpp  histogram_segmentation.cpp  image_processing.cpp  template_segmentation.cpp
pal_vision_segmentation/test/: histogram_segmentation_unit_test.cpp
realsense_camera/launch/: r200_nodelet_default.launch
realsense_gazebo_plugin/: CMakeLists.txt  package.xml
realsense_gazebo_plugin/.action/: waypoint.action
realsense_gazebo_plugin/launch/: ardrone_realsense.launch  fbet.launch  house.launch  pointcloud_xyzrgb.launch  register.launch  rtabmap.launch  rtabmap_pcl.launch
realsense_gazebo_plugin/models/map/: house.dae
realsense_gazebo_plugin/rviz/: autonomous_mapping.rviz  keyboard_mapping.rviz
realsense_gazebo_plugin/scripts/: client.py  pub_camera_info.py  send_goal.py  server.py
realsense_gazebo_plugin/worlds/: ardrone_realsense.world  demo.world  realsense.world  test.world
(+1 files in other folders)
